[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langchain-ibm"
version = "1.0.5"
description = "An integration package connecting IBM watsonx.ai and LangChain"
authors = [{ name = "IBM" }]
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
readme = "README.md"

dependencies = [
    "langchain-core>=1.2.22,<2.0.0",
    "ibm-watsonx-ai>=1.3.37,<2.0.0",
    "json-repair>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
sql_toolkit = ["pyarrow>=3.0.0"]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-ibm/tree/main/libs/ibm"
repository = "https://github.com/langchain-ai/langchain-ibm"

[dependency-groups]
lint = [
    "ruff>=0.13.1,<0.16.0",
    "pyarrow>=3.0.0",
]
typing = [
    "mypy>=1.17.1,<2.0.0",
    "types-requests>=2.28.11.5,<3.0.0",
]
test = [
    "pytest>=8.4.0,<10.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-dotenv>=0.5.2,<1.0.0",
    "syrupy>=4.0.2,<6.0.0",
    "pytest-watcher>=0.3.4,<0.7.0",
    "pytest-asyncio>=0.21.1,<2.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "langchain-tests>=1.0.0",
    "pyarrow>=3.0.0",
]

test_integration = []

codespell = [
  "codespell>=2.2.0,<3.0.0",
]

dev = []

# CVE-2026-21441, CVE-2025-66471, CVE-2025-66418: urllib3 < 2.6.3 is vulnerable to
# decompression-bomb attacks. No parent dependency has released a version that pins
# urllib3 >= 2.6.3 yet. Remove once upstream dependencies require it.
# CVE-2026-25645: requests < 2.33.0 insecure temp file reuse.
# Remove once upstream dependencies require the patched version.
security = [
    "urllib3>=2.6.3",
    "requests>=2.33.0",
]

[tool.uv]
# CVE-2026-21441/CVE-2025-66471/CVE-2025-66418  CVE-2026-25645
constraint-dependencies = ["urllib3>=2.6.3", "requests>=2.33.0"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
pydocstyle.convention = "google"
pep8-naming.classmethod-decorators = [
    "langchain_core.pydantic_v1.validator",
]
flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true
select = ["ALL"]
ignore = [
    "COM812", # Messes with the formatter
    "C901",    # Complex functions
    "PERF203", # Rarely useful
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "TC001",   # Doesn't play well with Pydantic
    "TC002",   # Doesn't play well with Pydantic
    "TC003",   # Doesn't play well with Pydantic
    #TODO
    "BLE001",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",       # Docstring checks in tests
    "PLR2004", # Magic numbers allowed in tests
    "S101",    # Tests need assertions
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SLF001",  # Private member access in tests
    "T201",
]
"scripts/*" = [
    "D",
    "T201",
    "INP"
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 -vv"
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
filterwarnings = "ignore::pytest.PytestUnraisableExceptionWarning"
