[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langchain-db2"
version = "1.0.0"
description = "An integration package connecting Db2 vector store and LangChain"
authors = [{ name = "IBM" }]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
readme = "README.md"

dependencies = [
    "langchain-core>=1.2.5,<2.0.0",
    "langchain-community>=0.4.0,<2.0.0",
    "ibm-db>=3.2.6,<4.0.0",
]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-ibm/tree/main/libs/langchain-db2"
repository = "https://github.com/langchain-ai/langchain-ibm"

[dependency-groups]
lint = [
    "ruff>=0.13.1,<0.16.0",
]
typing = [
    "mypy>=1.17.1,<2.0.0",
]
test = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=0.23.2,<2.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "langchain-tests>=0.3.5,<2.0.0",
    "langchain_huggingface[full]>=1.0.0,<2.0.0"
]

test_integration = []

codespell = [
  "codespell>=2.2.6,<3.0.0",
]

dev = []

# Security constraints for transitive dependencies.
# CVE-2026-21441, CVE-2025-66471, CVE-2025-66418: urllib3 < 2.6.3 decompression-bomb.
# CVE-2025-69223: aiohttp <= 3.13.2 decompression-bomb via auto_decompress.
# CVE-2026-25990: pillow < 12.1.1 out-of-bounds write loading PSD images.
# Remove each entry once upstream dependencies require the patched version.
security = [
    "urllib3>=2.6.3",
    "aiohttp>=3.13.3",
    "pillow>=12.1.1",
]

[tool.uv]
# CVE-2026-21441/CVE-2025-66471/CVE-2025-66418  CVE-2025-69223  CVE-2026-25990
constraint-dependencies = [
    "urllib3>=2.6.3",
    "aiohttp>=3.13.3",
    "pillow>=12.1.1",
]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
pydocstyle.convention = "google"
pep8-naming.classmethod-decorators = [
    "langchain_core.pydantic_v1.validator",
]
flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true
select = ["ALL"]
ignore = [
    "COM812", # Messes with the formatter
    "C901",    # Complex functions
    "FIX002",  # Line contains TODO
    "PERF203", # Rarely useful
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",       # Docstring checks in tests
    "PLR2004", # Magic numbers allowed in tests
    "S101",    # Tests need assertions
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SLF001",  # Private member access in tests
]
"scripts/*" = [
    "D",
    "T201",
    "INP"
]
"docs/*.ipynb" = [
    "D",
    "T201",
    # TODO
    "INP",
    "ANN",
    "BLE001",
    "ERA",
    "E",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true

# TODO: activate for 'strict' checking
disallow_any_generics = false
warn_return_any = false

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 -vv"
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
filterwarnings = "ignore::pytest.PytestUnraisableExceptionWarning"
